# PRIMoRDiA_1.1v_dev

./: CMakeLists.txt
include/: Iaorbital.h  Iatom.h  Ibuffer.h  Icube.h  Iline.h  Imolecule.h  Itimer.h  QMdriver.h  QMparser.h  autoprimordia.h  common.h  compPrimordia.h  gamess_files.h  gaussian_files.h  global_rd.h  gridgen.h  interface.h  local_rd.h  local_rd_cnd.h  log_class.h  mopac_files.h  orca_files.h  overlap_int.h  primordia.h  scripts.h  terachem_files.h  test_p.h
src/: Iaorbital.cpp  Iatom.cpp  Ibuffer.cpp  Icube.cpp  Iline.cpp  Imolecule.cpp  Iprotein.cpp  Itimer.cpp  QMdriver.cpp  QMparser.cpp  autoprimordia.cpp  common.cpp  compPrimordia.cpp  gamess_files.cpp  gaussian_files.cpp  global_rd.cpp  gridgen.cpp  interface.cpp  local_rd.cpp  local_rd_cnd.cpp  log_class.cpp  main.cpp  mopac_files.cpp  orca_files.cpp  overlap_int.cpp  primordia.cpp  scripts.cpp  terachem_files.cpp  test_p.cpp
